--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -323,7 +323,7 @@ h1{
     display: inline-block;
     padding: 12px 5px 12px 4px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 10;
+    font-size: 14;
     font-weight: 600;
     color:gray;
    
@@ -352,11 +352,14 @@ h1{
     background-color: #f1f1f1;
 
 }
-button{
+
+
+.sec-viewport .container {
+    text-align: center;
+}
+#btn{
     height:50px; 
-    text-align:center;
-    margin-left: 390px;
-    margin-right: 390px;
+    width:300px;
     margin-top: 50px;
     margin-bottom: 50px;
     color:gray;
@@ -364,9 +367,465 @@ button{
     border-radius: 5px;
     background-color: #f1f1f1;
     font-size: 20px;
+    box-shadow: 5px 10px 8px 10px #dfd7d7;
     }
     
-    button:hover{
+    #btn:hover{
         background-color: #f1f1f1;
         color:black;
     }
+
+    /***********section-paragraph*********/
+
+    .sec-para .container{
+        text-align: center;
+    }
+    #para-sec{
+        font-family:Arial, Helvetica, sans-serif;
+        color:gray;
+        letter-spacing: 2px;
+        line-height: 1.8;
+        font-weight: 600px;
+        width:50%;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 135px;
+        padding-bottom: 135px;
+    }
+
+    #barry-allen{
+        text-align: center;
+        font-family:Arial, Helvetica, sans-serif;
+        color:gray;
+        padding-top: -100px;
+        width:100%;
+        
+        
+    }
+
+  /* *******section-clouser****** */
+
+  .sec-banner{
+      width:100%;
+  }
+
+  #banner-img{
+    height:auto;
+    width:100%;
+	
+}
+
+/* ***********section-number */
+
+.list-number{
+    width:100%;
+	float:left;
+	text-decoration: none;
+    text-align:center;
+    padding: 50px 0 50px;
+	
+}
+
+#ul-num{
+	font-family:cursive;
+}
+
+#li-num{
+	float:left;
+	text-align:center;
+	list-style-type: none;
+	font-size:50px;
+    padding: 35px 88px 35px 88px;
+}
+
+#web{
+	font-size:10px;
+	font-family:Arial, Helvetica, sans-serif;
+	color:#0e5beb;
+}
+
+/*******section-clouser****/
+.sec-clouser{
+	width:100%;
+	
+
+}
+
+#clouser-img{
+   width:100%;
+	height:auto;
+}
+
+
+/***************section-our-team**********/
+
+
+
+#heading-ourteam{
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 36px;
+
+	
+}
+
+
+#ourteam-hr{
+    border: 2px solid #F6B813;
+    width: 42px;
+    margin-left: -1px;
+
+}
+
+
+
+.sec-user{
+	/* margin-left:165px;
+	margin-right: 165px; */
+	/* padding-top: 50px;
+	padding-bottom: 50px; */
+}
+
+
+#user-1{
+	height:300px;
+	width:300PX;
+	border:0px solid black;
+	float:left;
+    padding-left: 32PX;
+    padding-right: 32px;
+}
+
+
+
+#user-img{
+	height:100%;
+	width:100%;
+}
+
+#barry-1{
+
+	font-family:Arial, Helvetica, sans-serif; 
+    color: gray;
+    font-size: 15px;
+}
+
+
+/* **********section-pricing */
+
+.sec-pricing-plans{
+    background-color: #f1f1f1;
+
+}
+
+#heading-pricing{
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 36px;
+
+	
+}
+
+
+#pricing-hr{
+    border: 2px solid #F6B813;
+    width: 42px;
+    margin-left: -1px;
+
+}
+
+.pricing-card{
+
+	padding-top: 90px;
+    padding-bottom: 90px;
+  
+}
+
+
+#card-1{
+	height:550px;
+	width:300px;
+	border:none;
+	float:left;
+	border-radius: 1px;
+    background-color: white;
+    margin: 33px;
+    box-shadow: 5px 10px 8px 10px #afa9a9;
+    
+    
+	
+}
+
+h5{
+	font-family:Arial, Helvetica, sans-serif; 
+	font-size:15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#doller{
+	font-size:20px;
+	
+}
+
+#num{
+	font-size:75px;
+	font-family:Arial, Helvetica, sans-serif; 
+}
+
+#month{
+	font-size:17px;
+	color:gray;
+	font-family:Arial, Helvetica, sans-serif; 
+}
+
+.h-1{
+	text-align: center;
+}
+
+
+table{
+
+	font-family:Arial, Helvetica, sans-serif; 
+    font-size: 15px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+	
+}
+
+
+tr,td{
+	
+	
+    color:gray;
+    display: table;
+    margin: 0px 44px auto;
+    padding: 3px 3px 3px 3px;
+}
+
+
+h4{
+
+	font-family:Arial, Helvetica, sans-serif; 
+    color:#302e2e;
+    padding: 30px 0px 30px 0px;
+    text-align: center;
+}
+
+/************sec-get-in-touch*********/
+.sec-get-in-touch{
+    height:100%;
+    width:100%;
+}
+
+
+.left-area.getintouch{
+    width: 50%;
+    float: left;
+}
+.right-area.getintouch{
+    width: 50%;
+    float: left;
+}
+
+
+#heading-getintouch{
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 36px;
+    padding-top: 100px;
+    padding-left: 100PX;
+    padding-right: 100px;
+	
+	
+}
+
+#getintouch-hr{
+	width:38px;
+	border:2px solid #ffbb00;
+	margin-top:-20px;
+	margin-bottom:20px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+
+
+
+.login{
+	border: 0px solid black;
+	height:400px;
+	width:400px;
+    margin-left: 100px;
+	padding-top: 50px;
+}
+
+
+.placeholder{
+	color:#E6E3E3;
+	
+}
+
+
+input{
+	width: 100%;
+	padding: 15px 20px;
+	margin: 8px 0;
+	box-sizing: border-box;
+	border: none;
+	border-bottom: 2px solid black;
+	color:#E6E3E3;
+}
+
+textarea{
+	width: 100%;
+	padding: 70px 20px;
+	margin: 8px 0PX;
+	box-sizing: border-box;
+	border: none;
+	border-bottom: 2px solid black;
+}
+
+
+button{
+	background-color: black;
+	color:white;
+	border:0px solid black;
+	height:28px;
+	width:200px;
+	font-size: 11px;
+}
+
+button:hover{
+    color:black;
+    background-color: rgb(148, 147, 132);
+    box-shadow: 5px 10px 8px 10px #242323;
+}
+
+
+
+/*********section-footer***********/
+
+.sec-footer{
+	border:0px solid red;
+	height:450px;
+	width:100%;
+	background-color: #333131;
+}
+
+#img-footer{
+	height:80px;
+	width:80px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	padding-top: 60px;
+	
+}
+
+
+#footer-hr{
+	width:190px;
+	border:2px solid #ffbb00;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top:50px;
+	
+	
+}
+
+
+.footer-one ul{
+  
+ 
+    /* padding-top: 30px;
+    padding-bottom: 30px; */
+    list-style-type: center;
+    padding: 20px 265px 20px 265px;
+  
+
+}
+
+ .footer-one ul li{
+    list-style-type: none;
+    display: inline-block;
+}
+.footer-one ul li a {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    padding: 12px 14px 12px 14px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 13;
+    font-weight: 600;
+    color:gray;
+   
+}
+
+/* unvisited link */
+.footer-one ul li a:hover {
+    color: green;
+  }
+
+
+
+
+.footer-secound ol{
+  
+ 
+    /* padding-top: 30px;
+    padding-bottom: 30px; */
+    list-style-type: center;
+    padding: 0px 489px 0px 489px;
+  
+
+}
+
+ .footer-secound ol li{
+    list-style-type: none;
+    display: inline-block;
+}
+.footer-secound ol li a {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    padding: 12px 14px 12px 14px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 13;
+    font-weight: 600;
+    color:gray;
+   
+}
+
+/* unvisited link */
+.footer-secound ol li a:hover {
+    color: green;
+  }
+
+
+.number{
+	text-align: center;
+	font-family:"Times New Roman", Times, serif;
+	font-size: 14px;
+	color:gray; 
+}
+
+.email{
+	text-align: center;
+	color:gray;
+	font-size: 14;
+	font-family:"Times New Roman", Times, serif;
+	padding-top: 10px; 
+}
+
+/*********section-last-footer-my-theme**********/
+
+.sec-mytheme{
+	background-color: #251E1E ;	
+}
+
+.mytheam{
+	text-align: center;
+	color:gray ;
+    padding-top: 40px;
+    padding-bottom: 40px;
+	font-family:Arial, Helvetica, sans-serif;
+}
